--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ tgcrypto==1.2.5
 youtube-search-python
 yt-dlp==2024.11.18
 youtube-search
+git+https://github.com/badmunda98/pySukhPB
 git+https://github.com/PyrogramMod/PyrogramMod.git
