--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ py-tgcalls==2.1.0.dev2
 python-dotenv==1.0.1
 tgcrypto==1.2.5
 youtube-search-python
-yt-dlp==2024.11.18
+yt-dlp==2024.12.15.232913.dev0
 youtube-search
 git+https://github.com/badmunda98/pySukhPB
 git+https://github.com/PyrogramMod/PyrogramMod.git
